...
    <string name="focus_body">Zoom to object</string>
    <string name="motion_control">Tilt steering</string>

    <string name="object_count">Objects: %1$d of %2$d</string>
    <string name="app_name">Space</string>
    <string name="menu">"Menu"</string>
    <string name="find_core">"Find core"</string>
    <string name="fit_system">"Fit system"</string>
    <string name="skip">"Skip"</string>
    <string name="cancel_orbit">"Cancel orbit"</string>

    <string name="large_system">"Large system · Reduce time speed if movement slows"</string>
    <string name="play">"Play"</string>
...
